UNRELEASED, S3QL tip

  * Fixed another race condition that could lead to mount.s3ql
    crashing with `ValueError: I/O operation on closed file`.

  * S3QL no longer generates warning messages for the first two times
    that it has to resend a request to the storage backend. If there
    is no success after the second try, messages are emitted as before. 

2013-12-03, S3QL 2.6

  * Fixed a problem with mount.s3ql crashing with `KeyError` in
    `collections/abc.py`.

  * Fixed a problem with mount.s3ql crashing with `ValueError: I/O
    operation on closed file`.

  * Fixed a race condition that could lead to data corruption when
    multiple processes trigger download of the same data block
    simultaneously.

  * Fixed a problem with S3QL crashing with "SSLEOFError" when an SSL
    connection is terminated unexpectedly.

  * Increased deduplication performance. Previously, block checksums
    were accidentally computed without parallelism.

  * Fixed a problem with mount.s3ql (incorrectly) reporting corrupted
    data for compressed blocks of some specific sizes. Many thanks to
    Balázs for extensive debugging of this problem.

  * Specifying --debug when using syslog or file logging no longer
    suppresses informational messages to stdout.

  * Fixed build under MacOS X. Thanks to john@nachtimwald.com for the
    patch!

  * mount.s3ql now autodetects a sensible defaults for the
    --max-cache-entries and --cachesize options.
    
2013-10-19, S3QL 2.5

  * Removed a race condition that resulted in a crash when a file was
    deleted while the upload was in progress, and the upload was then
    restarted because of a connection problem.

  * Specifying bzip2 as the compression algorithm for mount.s3ql
    no longer gives an error.

  * Fixed another race condition that could lead to the (apparent)
    vanishing of the file system metadata when the mount.s3ql is
    killed at an unfortunate time.
